@@ -23,7 +23,7 @@ USA.
 */
 
 #define SLANG_VERSION 20300
-#define SLANG_VERSION_STRING "pre2.3.0-116"
+#define SLANG_VERSION_STRING "pre2.3.0-117"
 /* #ifdef __DATE__ */
 /* # define SLANG_VERSION_STRING SLANG_VERSION_STRING0 " " __DATE__ */
 /* #else */
@@ -1948,8 +1948,8 @@ SL_EXTERN int SLsmg_Backspace_Moves;
 # define SLSMG_COLOR_BRIGHT_GREEN	0x00000A
 # define SLSMG_COLOR_BRIGHT_BROWN	0x00000B
 # define SLSMG_COLOR_BRIGHT_BLUE	0x00000C
-# define SLSMG_COLOR_BRIGHT_CYAN	0x00000D
-# define SLSMG_COLOR_BRIGHT_MAGENTA	0x00000E
+# define SLSMG_COLOR_BRIGHT_MAGENTA	0x00000D
+# define SLSMG_COLOR_BRIGHT_CYAN	0x00000E
 # define SLSMG_COLOR_BRIGHT_WHITE	0x00000F
 #endif
 
